# kotlinc-js-passthrough-example

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE
src/: A.kt  A_js.kt  BUILD.bazel
